RESOLVED FIXED141965
Hide Promise with runtime flags under Cocoa JSContext API
https://bugs.webkit.org/show_bug.cgi?id=141965
Summary Hide Promise with runtime flags under Cocoa JSContext API
Yusuke Suzuki
Reported 2015-02-24 03:58:13 PST
Hide Promise with runtime flags under Cocoa JSContext API
Attachments
Patch (16.15 KB, patch)
2015-02-28 19:04 PST, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2015-02-24 13:52:01 PST
Yusuke Suzuki
Comment 2 2015-02-28 19:04:14 PST
Joseph Pecoraro
Comment 3 2015-03-03 16:51:13 PST
Thanks for the patch! I think this makes sense for the short term. Currently using a Promise in a JSContext application does nothing but log to syslog: 1. Run a JSContext application 2. Open JSContext inspector for application 3. js> Promise.resolve("message").then(function(x) { console.log(x); }) => Application syslog "ERROR: Event loop not supported." => my "then block" never fires and never logs Ultimately we should provide some way to support promises. Until then, I think this makes sense. Someone more qualified than me should review this though.
Yusuke Suzuki
Comment 4 2015-03-04 18:34:38 PST
Could you review this patch?
WebKit Commit Bot
Comment 5 2015-03-04 20:26:13 PST
Comment on attachment 247621 [details] Patch Clearing flags on attachment: 247621 Committed r181064: <http://trac.webkit.org/changeset/181064>
WebKit Commit Bot
Comment 6 2015-03-04 20:26:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.