Source/JavaScriptCore/API/JSCallbackObjectFunctions.h
@@ -62,11 +62,13 @@ JSCallbackObject<Parent>::JSCallbackObject(ExecState* exec, Structure* structure
 {
 }
 
+extern const GlobalObjectMethodTable javaScriptCoreAPIGlobalObjectMethodTable;
+
 // Global object constructor.
 // FIXME: Move this into a separate JSGlobalCallbackObject class derived from this one.
 template <class Parent>
 JSCallbackObject<Parent>::JSCallbackObject(VM& vm, JSClassRef jsClass, Structure* structure)
-    : Parent(vm, structure)
+    : Parent(vm, structure, &javaScriptCoreAPIGlobalObjectMethodTable)
     , m_callbackObjectData(adoptPtr(new JSCallbackObjectData(0, jsClass)))
 {
 }
